--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@radix-ui/react-toggle": "^1.1.10",
     "@radix-ui/react-toggle-group": "^1.1.11",
     "@radix-ui/react-tooltip": "^1.2.8",
+    "@radix-ui/react-use-controllable-state": "^1.2.2",
     "@supabase/ssr": "^0.7.0",
     "@supabase/supabase-js": "^2.84.0",
     "@types/d3": "^7.4.3",
@@ -48,6 +49,7 @@
     "cmdk": "^1.1.1",
     "cytoscape": "^3.33.1",
     "d3": "^7.9.0",
+    "deepagents": "^1.1.1",
     "dotenv": "^17.2.3",
     "embla-carousel-react": "^8.6.0",
     "input-otp": "^1.4.2",
@@ -55,6 +57,8 @@
     "langchain": "^1.0.6",
     "lucide-react": "^0.554.0",
     "mermaid": "^11.12.1",
+    "motion": "^12.23.24",
+    "nanoid": "^5.1.6",
     "next": "16.0.3",
     "next-themes": "^0.4.6",
     "openai": "^6.9.1",
@@ -68,9 +72,11 @@
     "rehype-katex": "^7.0.1",
     "remark-gfm": "^4.0.1",
     "sonner": "^2.0.7",
+    "streamdown": "^1.6.1",
     "tailwind-merge": "^3.4.0",
+    "use-stick-to-bottom": "^1.1.1",
     "vaul": "^1.1.2",
-    "zod": "^4.1.12"
+    "zod": "^3.25.76"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
