--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     "recharts": "^3.4.1",
     "rehype-katex": "^7.0.1",
     "remark-gfm": "^4.0.1",
+    "shiki": "^3.15.0",
     "sonner": "^2.0.7",
     "streamdown": "^1.6.1",
     "tailwind-merge": "^3.4.0",
