--- a/package.json
+++ b/package.json
@@ -62,6 +62,8 @@
     "next": "16.0.3",
     "next-themes": "^0.4.6",
     "openai": "^6.9.1",
+    "pdf-parse": "^2.4.5",
+    "pdf2json": "^4.0.0",
     "react": "19.2.0",
     "react-day-picker": "^9.11.1",
     "react-dom": "19.2.0",
