--- a/package.json
+++ b/package.json
@@ -52,6 +52,8 @@
     "deepagents": "^1.1.1",
     "dotenv": "^17.2.3",
     "embla-carousel-react": "^8.6.0",
+    "google-auth-library": "^10.5.0",
+    "googleapis": "^166.0.0",
     "input-otp": "^1.4.2",
     "katex": "^0.16.25",
     "langchain": "^1.0.6",
