feat last changes

--- a/platanus-hack-project.json
+++ b/platanus-hack-project.json
@@ -1,4 +1,4 @@
 {
-  "project-name": "<FILL THIS>",
-  "project-description-spanish": "<FILL THIS>"
+  "project-name": "BrainFlow",
+  "project-description-spanish": "BrainFlow es una plataforma de aprendizaje adaptativo que utiliza IA para crear grafos de conocimiento personalizados. Combina toma de notas inteligente, journaling reflexivo y asistentes de estudio para potenciar el aprendizaje humano. Incluye integraciones con WhatsApp y Google Calendar para una experiencia fluida."
 }
