--- a/platanus-hack-project.json
+++ b/platanus-hack-project.json
@@ -1,5 +1,5 @@
 {
   "project-name": "BrainFlow",
   "project-description-spanish": "BrainFlow es una plataforma de aprendizaje adaptativo que utiliza IA para crear grafos de conocimiento personalizados. Combina toma de notas inteligente, journaling reflexivo y asistentes de estudio para potenciar el aprendizaje humano. Incluye integraciones con WhatsApp y Google Calendar para una experiencia fluida.",
-  "deploy-url": "https://example.com"
+  "deploy-url": "https://platanus-hack-25-team-23.vercel.app/"
 }
